# SQA_task

./: .gitignore  README.md  app.py  pyproject.toml  report.html  run_tests.sh
banking/: __init__.py  account.py  auth.py  bank.py  models.py
docs/: report.md  test_cases.csv
templates/: index.html
tests/: test_account.py  test_auth.py  test_integration.py  test_transaction.py  test_ui.py
