[project]
name = "simple-banking-system"
version = "1.0.0"
description = "A Simple Banking System for Software Quality Assurance testing"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-html>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
